Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103093

Palette Change And Application PaletteChange Never Emited

XMLWordPrintable

    • All
    • 223fdc7d52 (qt/qtbase/dev) 223fdc7d52 (qt/tqtc-qtbase/dev) 6ea58fb499 (qt/qtbase/6.4) 6ea58fb499 (qt/tqtc-qtbase/6.4) 30581f9146 (qt/tqtc-qtbase/6.2), 0328e4297 (dev), f9349d15d (6.5)

      PaletteChange and ApplictionPaletteChange Events are not emitted in Qt 6.3.0

       
      See provided Example project 

      Works with 5.15.2  not 6.3.0 (maybe other 6.x) 

        1. PaletteChangeTest.tar.gz
          1 kB
        2. dbus-monitor_log.txt
          63 kB
        3. log_qt5.txt
          63 kB
        4. qt_qpadbus_lisandro.json
          1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            axelspoerl Axel Spoerl
            sithlord48 chris
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes